# DSpellCheck

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Changes.md  DSpellCheck.DotSettings  DownloadDicsDlg.cpp  PrecompiledHeader.cmake  README.md  appveyor.yml  coverage.bat  deploy.py  plan.txt
.github/workflows/: build.yml
CMake/: ucm.cmake
FtpClient/: BlockingSocket.cpp  BlockingSocket.h  CMakeLists.txt  Definements.h  FTPClient.cpp  FTPClient.h  FTPDataTypes.h  FTPListParse.cpp  FTPListParse.h
Hunspell/: CMakeLists.txt
Resources/: convert-icon.bat  convert-svg-to-bmp.bat  convert-svg-to-ico.bat
include/: PluginMsg.h
libiconv/: CMakeLists.txt
minizip/: CMakeLists.txt  unzip.h
src/: .clang-format  AboutDlg.cpp  AboutDlg.h  AbstractSpellerInterface.cpp  AbstractSpellerInterface.h  AspellController.cpp  AspellController.h  AspellInterface.cpp  AspellInterface.h  AspellOptionsDialog.cpp  AspellOptionsDialog.h  CommonFunctions.cpp  CommonFunctions.h  ConnectionSettingsDialog.cpp  ConnectionSettingsDialog.h  ContextMenuHandler.cpp  ContextMenuHandler.h  CustomMessage.h  DSpellCheck.cpp  DSpellCheck.rc  DllMain.cpp  DownloadDicsDlg.cpp  DownloadDicsDlg.h  FileListProvider.h  GithubFileListProvider.cpp  GithubFileListProvider.h  HunspellController.cpp  HunspellController.h  HunspellInterface.cpp  HunspellInterface.h  LangList.cpp  LangList.h  LangListDialog.cpp  LangListDialog.h  LanguageInfo.h  LanguageName.cpp  LanguageName.h  MainDef.h  MainDefs.h  MappedWString.h  (+68 more)
src/Controls/: Window.h
src/Controls/CheckedList/: CheckedList.cpp  CheckedList.h
src/Controls/StaticDialog/: StaticDialog.cpp  StaticDialog.h
src/Controls/TabBar/: ControlsTab.cpp  ControlsTab.h  TabBar.cpp  TabBar.h
src/Hunspell/: CMakeLists.txt  README.md
src/StackWalker/: StackWalker.cpp  StackWalker.h
src/common/: CommonFunctions.cpp  CommonFunctions.h  IniWorker.cpp  IniWorker.h  MappedWstring.h  PrecompiledHeader.h  ProgressData.cpp  ProgressData.h  TaskWrapper.cpp  TaskWrapper.h  TemporaryAcessor.h  Utility.cpp  Utility.h  Win32Exception.cpp  Win32Exception.h  WinApiControls.cpp  WinApiControls.h  WinInet.cpp  WinInet.h  enum_array.h  enum_range.h  move_only.h  overload.h  raii.cpp  raii.h  string_utils.cpp  string_utils.h  utf8.h  winapi.cpp  winapi.h
src/core/: SpellChecker.cpp  SpellChecker.h  SpellCheckerHelpers.cpp  SpellCheckerHelpers.h
src/libiconv/: CMakeLists.txt
src/libiconv/DebugStatic_Win32/: libiconvStaticD.lib
src/libiconv/ReleaseStatic_Win32/: libiconvStatic.lib
src/libiconv/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
src/libiconv/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
src/minizip/: CMakeLists.txt
src/network/: FileListProvider.h  GithubFileListProvider.cpp  GithubFileListProvider.h  UrlHelpers.cpp  UrlHelpers.h
src/npp/: EditorInterface.cpp  EditorInterface.h  NppInterface.cpp  NppInterface.h  SciUtils.cpp  SciUtils.h  ScintillaUtils.cpp  ScintillaUtils.h  TextUtils.cpp  TextUtils.h
src/plugin/: Constants.h  DSpellCheck.rc  MainDefs.h  Plugin.cpp  Plugin.h  Settings.cpp  Settings.h  resource.h
src/spellers/: AspellInterface.cpp  AspellInterface.h  HunspellInterface.cpp  HunspellInterface.h  LanguageInfo.h  NativeSpellerInterface.cpp  NativeSpellerInterface.h  SpellerContainer.cpp  SpellerContainer.h  SpellerId.h  SpellerInterface.cpp  SpellerInterface.h  aspell.cpp
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDlg.cpp  AboutDlg.h  AspellOptionsDialog.cpp  AspellOptionsDialog.h  ConnectionSettingsDialog.cpp  ConnectionSettingsDialog.h  ContextMenuHandler.cpp  ContextMenuHandler.h  DownloadDicsDlg.cpp  DownloadDicsDlg.h  DownloadDictionariesDialog.cpp  DownloadDictionariesDialog.h  LangList.cpp  LangList.h  MenuItem.cpp  MenuItem.h  ProgressDialog.cpp  ProgressDialog.h  ProgressDlg.cpp  ProgressDlg.h  RemoveDictionariesDialog.cpp  RemoveDictionariesDialog.h  SelectMultipleLanguagesDialog.cpp  SelectMultipleLanguagesDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDlg.cpp  SettingsDlg.h  StaticDialog.cpp  StaticDialog.h  SuggestionMenuButton.cpp  SuggestionMenuButton.h  SuggestionsButton.cpp  SuggestionsButton.h
src/utils/: IniWorker.cpp  IniWorker.h  TemporaryAcessor.h  Uncopiable.h  Win32Exception.cpp  Win32Exception.h  WinApiControls.cpp  WinApiControls.h  WinInet.cpp  WinInet.h  enum_array.h  enum_range.h  enum_vector.h  move_only.h  overload.h  raii.cpp  raii.h  remap_rvalues_for.h  string_utils.cpp  string_utils.h  utf8.cpp  utf8.h  winapi.cpp  winapi.h
test/: EncodingTests.cpp  LanguageStyleTests.cpp  MockEditorInterface.cpp  MockEditorInterface.h  MockSpeller.cpp  MockSpeller.h  SampleTest.cpp  SpellCheckerTests.cpp  StringParsingTests.cpp  StringTests.cpp  TestCommon.cpp  TestCommon.h  main.cpp
