cmake_minimum_required (VERSION 3.7)
project (hunspell)
file (GLOB_RECURSE source_files *.cxx *.hxx)
list(REMOVE_ITEM source_files "${CMAKE_CURRENT_LIST_DIR}/src/hunspell/utf_info.cxx")
add_library (hunspell STATIC ${source_files})
target_compile_definitions (hunspell PRIVATE -DHUNSPELL_STATIC)
target_include_directories (hunspell PUBLIC src/)