cmake_minimum_required (VERSION 2.6) 
project (LibIConv)
set (SRC_DIR ${PROJECT_SOURCE_DIR}/libiconv)
include_directories (${PROJECT_SOURCE_DIR}/include) 

# For now let's make it only static
set (GENERIC_OUTPUT_DIR ${PROJECT_SOURCE_DIR})
set (DEBUG_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/DebugStatic_Win32)
set (RELEASE_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/ReleaseStatic_Win32)
add_definitions ("-D_CRT_NONSTDC_NO_DEPRECATE -D_UNICODE -DUNICODE -D_CRT_SECURE_NO_WARNINGS -D_CRT_NON_CONFORMING_SWPRINTFS -D_CRT_SECURE_NO_DEPRECATE -D_WIN32_WINNT=0x501 -DWINVER=0x501 -D_LIB -DUSING_STATIC_LIBICONV")

#set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GENERIC_OUTPUT_DIR} )
set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${DEBUG_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}" ) 
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}" )
set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${RELEASE_OUTPUT_DIR}" )
set ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}" )
set ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}" )

set (list_of_files_IConv
	${SRC_DIR}/libiconv.rc 
	${SRC_DIR}/localcharset.h
	${SRC_DIR}/iconv.c
	${SRC_DIR}/localcharset.c
	${SRC_DIR}/relocatable.c
	${SRC_DIR}/relocatable.h
	)
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} /MT")

add_library (libiconv STATIC ${list_of_files_IConv})

